--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
     padding: 24px 0;
 }
 .estudante-imagem{
-    width: 50px;
+    width: 90px;
 }
 
 .estudante-icone{
@@ -59,7 +59,7 @@ body {
 }
 
 .estudante-div{
-    text-align: center;
+    text-align: middle;
     padding: 16px 0;
 }
 
