--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
+    background-image: linear-gradient(#a37b45,#702f6d);
     color:white;
     display: flex;
     justify-content: center;
@@ -74,7 +74,7 @@ body {
 }
 
 .rodape{
-    background-color: black;
+    background-color: rgb(157, 245, 223);
     text-align: center;
 }
 
