--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #fffefd;
+    background-color: #160f08;
     color: white;
     display: flex;
     justify-content: space-around;
