--- a/style.css
+++ b/style.css
@@ -64,14 +64,10 @@ body {
 }
 
 .estudante-titulo{
-    text-align: middle;
+    text-align: center;
     padding: 50px 0;
 }
 
-.estudante-todos{
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-}
 
 .rodape{
     background-color: rgb(138, 12, 138);
